# PyRpiCamController

./: .gitignore  ADMIN_API_DOCUMENTATION.md  ARCHITECTURE.md  CONTRIBUTING.md  INSTALLATION.md  README.md  RELEASE_NOTES.md  SECURITY_CREDENTIALS_GUIDE.md  SMB_FILE_SHARING.md  SYSTEM_PROMPT.md  TROUBLESHOOTING.md  USER_GUIDE.md  USER_GUIDE_SWE.md  _put_this_folder_in_home_root_.txt  debug_packaging.py  pandas.py  pyproject.toml  readme.adoc  requirements.txt  test_upload.php  version_management_new.php
.dev-guidelines/: AI_INSTRUCTIONS.md  CODE_QUALITY.md  DESIGN_PATTERNS.md  DOCUMENTATION_SYNC.md  FILE_PERMISSIONS.md  GIT_WORKFLOW.md  INSTALLER_UPDATES.md  README.md  SWEDISH_TRANSLATIONS.md
CamController/: LoggingSecure.py  Main.py  MainLoop.py  VisionHomeAssistantIntegration.py  camconfig-tmpl.py  camconfig.py  camcontroller.service  hwconfig.py
PyBeeCam/: Main.py  MainLoop.py
Services/: avahi-smb.service  camcontroller-update.service  camcontroller-web.service  camcontroller.service  comitup.conf  fix_samba_anonymous.sh  self_heal_shared.sh  smb.conf
Settings/: UNIFIED_SETTINGS_GUIDE.adoc  UNIFIED_SETTINGS_GUIDE.md  add_setting_levels.py  demo_settings.py  settings_manager.py  settings_schema.json  user_settings.json
Updates/: SECURITY_GUIDE.adoc  SECURITY_GUIDE.md  UPDATE_GUIDE.adoc  UPDATE_GUIDE.md  camcontroller-update.service  camcontroller_update_daemon.py  camcontroller_update_manager.py  recovery.sh  test_updates.py
WebGui/: MANUAL_UPDATE_IMPLEMENTATION.md  WEBGUI_DOCUMENTATION.md  camcontroller-web.service  web_app.py
_doc/: .$beecam-3.drawio.bkp  ARCHITECTURAL_DIAGRAM_PROMPT.md  CAMCONTROLLER_ARCHITECTURE.adoc  CAMCONTROLLER_ARCHITECTURE.md  SETTINGS_SYSTEM_PROMPT.md  beecam-3.drawio  design.adoc  design.md  product_description.odt  raspi-zero.adoc  raspi-zero.md  send_setup.drawio  send_setup2.drawio  userguide.adoc  userguide.md
backend/: .htaccess  BACKEND.adoc  BACKEND.md  README.md  admin_auth.php  admin_logout.php  api_test.php  config.php  db_setup.php  db_status.php  device_management.php  ota_check.php  ota_database_schema.sql  ota_report.php  post_logitem.php  post_logitem_secure.php  receive_and_store_image_data.php  secrets_tmpl.php  simple_device_list.php  (+1 more)
(+177 files in other folders)
